{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 31,
  "lineage": "3d152e9e-6523-db36-0e45-207b5bc3057e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a9e1b7837121b0a",
            "arn": "arn:aws:ec2:us-east-2:340752802272:elastic-ip/eipalloc-02a9e1b7837121b0a",
            "domain": "vpc",
            "id": "eipalloc-02a9e1b7837121b0a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-246-248.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.246.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:internet-gateway/igw-0b05d5b14d4091c0e",
            "id": "igw-0b05d5b14d4091c0e",
            "owner_id": "340752802272",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a9e1b7837121b0a",
            "association_id": "eipassoc-06d1fc0460ea1d9dd",
            "connectivity_type": "public",
            "id": "nat-0a3a6b5793b8a3d1b",
            "network_interface_id": "eni-0d226665ea7809749",
            "private_ip": "10.0.72.120",
            "public_ip": "3.17.246.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-012272539dcdd1883",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:route-table/rtb-002fdcbb424939c85",
            "id": "rtb-002fdcbb424939c85",
            "owner_id": "340752802272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3a6b5793b8a3d1b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private"
            },
            "tags_all": {
              "Name": "prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:route-table/rtb-0a564a936d8535dd2",
            "id": "rtb-0a564a936d8535dd2",
            "owner_id": "340752802272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b05d5b14d4091c0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public"
            },
            "tags_all": {
              "Name": "prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ea1da2118c8b5fb",
            "route_table_id": "rtb-002fdcbb424939c85",
            "subnet_id": "subnet-05839a788c21e2e86"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dce778e9ebcad11d",
            "route_table_id": "rtb-002fdcbb424939c85",
            "subnet_id": "subnet-0be2e1acdc217c1ed"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070e299475eac8dab",
            "route_table_id": "rtb-0a564a936d8535dd2",
            "subnet_id": "subnet-012272539dcdd1883"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea79e0744da83efb",
            "route_table_id": "rtb-0a564a936d8535dd2",
            "subnet_id": "subnet-0c487beb0f0765cfa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:subnet/subnet-05839a788c21e2e86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05839a788c21e2e86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340752802272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-us-east-2a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "prod-private-us-east-2a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:subnet/subnet-0be2e1acdc217c1ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be2e1acdc217c1ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340752802272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-us-east-2b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "prod-private-us-east-2b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:subnet/subnet-012272539dcdd1883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012272539dcdd1883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "340752802272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-us-east-2a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-public-us-east-2a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:subnet/subnet-0c487beb0f0765cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c487beb0f0765cfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "340752802272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-us-east-2b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-public-us-east-2b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08a4851fb4011c730"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:340752802272:vpc/vpc-08a4851fb4011c730",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06217f4daab6f6cdd",
            "default_route_table_id": "rtb-09b5eb147f289092c",
            "default_security_group_id": "sg-0144a0a44b92cda73",
            "dhcp_options_id": "dopt-00b5b510c9cadf42b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a4851fb4011c730",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b5eb147f289092c",
            "owner_id": "340752802272",
            "tags": {
              "Name": "prod-main"
            },
            "tags_all": {
              "Name": "prod-main"
            }
          }
        }
      ]
    }
  ]
}